Aligned the text in the table, corrected my two CSS validator errors

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,6 +85,7 @@ body {
     height:100%;
     width:100%;
     position: absolute;
+    border: none;
 }
 
 /* Text */
@@ -140,6 +141,10 @@ table {
     color: #fafafa;
 }
 
+ td {
+    text-align: center;
+    }
+
 table, th, td {
     margin-bottom: 50px;
     height: 40px;
@@ -156,7 +161,7 @@ table, th, td {
     background-color:  rgba(32, 29, 29, 0.2);
 }
 
--------------------------------------/*Shop */---------------------------------------
+/* Shop */
 
 .img-hs {
     font-family: 'Bowlby One SC', cursive;
@@ -188,21 +193,12 @@ table, th, td {
     color:#A98F31;
 }
 
-.product-cards {
-    min-height: 100%;
-    max-height: fit-content;
-    align-items: center;
-    justify-content: flex-end;
-    margin-bottom: 20px;
-    padding: 10px;
-}
-
-.card {
-    outline: none;
-    border: none;
+.card-img-top {
+    min-height: 260px;
 }
 
 .card-text {
+    min-height: 60px;
     font-size: 14px;
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -225,14 +221,15 @@ table, th, td {
     margin: 10px 25px 25px;
     padding: 5px;;
 }
-------------------------------------/* Footer */------------------------------
+
+/* Footer */
 
 .footer {
     height: 100px;
     justify-content: center;
     align-items: center;
     background-color: black;
-    font-size: 2px;
+    font-size: 14px;
 }
 
 .footer-container {
@@ -274,6 +271,11 @@ table, th, td {
 
 .contact-list{
     font-size: 20px;
+}
+
+.contact-list a {
+    text-decoration: none;
+    color: #A98F31;
 }
 
 .contact-list li,
